--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2876,7 +2876,7 @@ footer h6 {
 }
 .history-info-cover .history-info .title::before {
   content: "➜";
-  font-family: 'FontAwesome';
+  /* font-family: 'Roboto'; */
   position: absolute;
   left: -105px;
   top: 26px;
