--- a/assets/css/new-site.css
+++ b/assets/css/new-site.css
@@ -116,8 +116,8 @@
   background: none;
   padding-bottom: 95px;
 }
-.bg-blue{
-  background-color: #F6FDF5;
+.bg-blue {
+  background-color: #f6fdf5;
 }
 
 .icon-refresh {
@@ -148,19 +148,18 @@
   content: ".";
   color: #fff;
 }
-.font-18{
+.font-18 {
   font-size: 18px;
 }
 
-.img-center{
+.img-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.register-QR{
+.register-QR {
   position: relative;
-
 }
 
 .register-QR:before {
@@ -172,11 +171,11 @@
   left: 0;
 }
 
-.text-bold{
+.text-bold {
   font-weight: 800;
 }
 
-.img-demo{
+.img-demo {
   /* background-color: #0d3150; */
   height: 50px;
   margin-bottom: 10px;
@@ -187,45 +186,50 @@
   word-break: keep-all;
 }
 
-.pad-10{
+.pad-10 {
   padding-top: 20px !important;
 }
 
-.object-non{
+.object-non {
   object-fit: fill !important;
 }
 
-.font-size-23{
-  font-size:23px;
+.font-size-23 {
+  font-size: 23px;
 }
-.font-size-22{
-  font-size:22px;
-}
-
-.font-size-19{
-  font-size:19px;
+.font-size-22 {
+  font-size: 22px;
 }
 
-.font-size-35{
+.font-size-19 {
+  font-size: 19px;
+}
+
+.font-size-35 {
   font-size: 35px;
 }
-.font-size-38px{
+.font-size-38px {
   font-size: 38px;
 }
 
-.font-size-37{
+.font-size-37 {
   font-size: 37px;
 }
 
-.font-size-34{
+.font-size-34 {
   font-size: 34px;
 }
 
-.font-size-33{
+.font-size-33 {
   font-size: 33px;
 }
 
-.font-size-32{
+.font-size-32 {
   font-size: 32px;
 }
 
+.join-our-team-item img {
+  width: 100%;
+  height: 270px;
+  
+}
