--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4019,9 +4019,9 @@ blockquote:before {
 .main-slide-two .img-slide {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: 20%;
   z-index: 2;
-  max-width: 54%;
+  max-width: 50%;
   max-height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
